some css tweaks to make sure that people cards vertically align

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -56,6 +56,7 @@ blockquote {
 
 .card {
   background-color: var(--global-card-bg-color);
+  min-height: 36rem;
   
   img {
     width: 100%;
@@ -63,6 +64,8 @@ blockquote {
 
   .card-title {
     color: var(--global-text-color);
+    min-height: 5.0rem;
+    vertical-align: text-bottom;
   }
 
   .card-item {
